--- a/Belal.htm
+++ b/Belal.htm
@@ -16,7 +16,7 @@
 	<span id="close-btn"><img src="images/menu.png"></span>
 	<li>
 	<a href="https://www.facebook.com/belal.safroot">
-	<image src="photos/Capture.png" height="50" width="50" class="image"></li></a>
+	<image src="photos/facebook.png" height="50" width="50" class="image"></li></a>
 	<li>
 	<a href="https://www.instagram.com/belal.safrot1/">
 	<image src="photos/instgram.png" height="50" width="50" class="image"></li></a>
